// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/widgets/menu/menu_items/submenu_item > empty subMenu should match snapshot 1`] = `
<div>
  <li
    class="SubMenuItem MenuItem"
    id="1_menuitem"
    role="menuitem"
  >
    <div
      class=""
      id="1"
      role="button"
      tabindex="0"
    >
      <div
        class="flex"
      >
        test
        <span
          class="selected"
        />
        <span
          aria-label="submenu icon"
          class="fa fa-angle-right SubMenu__icon-right-empty"
          id="channelHeaderDropdownIconRight_1"
        />
      </div>
      <ul
        class="a11y__popup Menu dropdown-menu SubMenu"
        id="1_submenu"
        style="visibility: hidden; right: 100%;"
      />
    </div>
  </li>
</div>
`;

exports[`components/widgets/menu/menu_items/submenu_item > present subMenu should match snapshot with submenu 1`] = `
<div>
  <li
    aria-controls="1_submenu"
    aria-expanded="false"
    aria-haspopup="menu"
    class="SubMenuItem MenuItem"
    id="1_menuitem"
    role="menuitem"
  >
    <div
      class=""
      id="1"
      role="button"
      tabindex="0"
    >
      <div
        class="flex"
      >
        test
        <span
          class="selected"
        />
        <span
          aria-label="submenu icon"
          class="fa fa-angle-right SubMenu__icon-right"
          id="channelHeaderDropdownIconRight_1"
        />
      </div>
      <ul
        class="a11y__popup Menu dropdown-menu SubMenu"
        id="1_submenu"
        style="visibility: hidden; right: 100%;"
      >
        <span
          class="SubMenuItemContainer"
          tabindex="0"
        >
          <li
            class="SubMenuItem MenuItem"
            id="A_menuitem"
            role="menuitem"
          >
            <div
              class=""
              id="A"
              role="button"
              tabindex="1"
            >
              <div
                class="flex"
              >
                Test A
                <span
                  class="selected"
                />
                <span
                  aria-label="submenu icon"
                  class="fa fa-angle-right SubMenu__icon-right-empty"
                  id="channelHeaderDropdownIconRight_A"
                />
              </div>
              <ul
                class="a11y__popup Menu dropdown-menu SubMenu"
                id="A_submenu"
                style="visibility: hidden; right: 100%;"
              />
            </div>
          </li>
        </span>
        <span
          class="SubMenuItemContainer"
          tabindex="0"
        >
          <li
            class="SubMenuItem MenuItem"
            id="B_menuitem"
            role="menuitem"
          >
            <div
              class=""
              id="B"
              role="button"
              tabindex="1"
            >
              <div
                class="flex"
              >
                Test B
                <span
                  class="selected"
                />
                <span
                  aria-label="submenu icon"
                  class="fa fa-angle-right SubMenu__icon-right-empty"
                  id="channelHeaderDropdownIconRight_B"
                />
              </div>
              <ul
                class="a11y__popup Menu dropdown-menu SubMenu"
                id="B_submenu"
                style="visibility: hidden; right: 100%;"
              />
            </div>
          </li>
        </span>
      </ul>
    </div>
  </li>
</div>
`;
